--- a/MvcFlash.Sample/Views/Shared/_Layout.cshtml
+++ b/MvcFlash.Sample/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>MvcFlash, for ASP.Net MVC</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +12,9 @@
     <!-- Le styles -->
     <link href="~/Content/bootstrap.min.css" rel="stylesheet">
     <style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
+        body {
+            padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+        }
     </style>
     <link href="~/Content/bootstrap-responsive.min.css" rel="stylesheet">
 
@@ -23,38 +23,41 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-  </head>
+</head>
 
-  <body>
+<body>
 
     <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">MvcFlash</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li><a href="@Url.Action("index", "home")">Home</a></li>
-              <li><a href="@Url.Action("index", "WithBase")">With Base</a></li>
-              <li><a href="@Url.Action("index", "IoC")">IoC</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
+        <div class="navbar-inner">
+            <div class="container">
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+                <a class="brand" href="#">MvcFlash</a>
+                <div class="nav-collapse collapse">
+                    <ul class="nav">
+                        <li><a href="@Url.Action("index", "home")">Home</a></li>
+                        <li><a href="@Url.Action("index", "WithBase")">With Base</a></li>
+                        <li><a href="@Url.Action("index", "IoC")">IoC</a></li>
+                        <li><a href="@Url.Action("index", "Tricks")">Tricks</a></li>
+                    </ul>
+                </div>
+                <!--/.nav-collapse -->
+            </div>
         </div>
-      </div>
     </div>
 
     <div class="container">
         @RenderBody()
-    </div> <!-- /container -->
+    </div>
+    <!-- /container -->
 
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-      <script src="~/Scripts/jquery-1.8.2.min.js"></script>
-      <script src="~/Scripts/bootstrap.min.js"></script>
-  </body>
+    <script src="~/Scripts/jquery-1.8.2.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+</body>
 </html>
