A RavenDb Flash Messenger, works but would be better with Dependency Injection example.

--- a/MvcFlash.Sample/Views/Shared/_Layout.cshtml
+++ b/MvcFlash.Sample/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
                         <li><a href="@Url.Action("index", "WithBase")">With Base</a></li>
                         <li><a href="@Url.Action("index", "IoC")">IoC</a></li>
                         <li><a href="@Url.Action("index", "Tricks")">Tricks</a></li>
+                        <li><a href="@Url.Action("index", "RavenDb")">RavenDB</a></li>
                     </ul>
                 </div>
                 <!--/.nav-collapse -->
